--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "request": "launch",
             "name": "Kotlin Launch",
             "projectRoot": "${workspaceFolder}",
-            "mainClass": "main"
+            "mainClass": "org.example.AppKt"
+            // org.example.App
+            // App
         }
     ]
 }
